Fixed #5735: aligned background color of quick-open menu with other widgets
- Aligned the background color of quick-open menu with other widgets (e.g. the side-panel widget). This would also make the top shadow line more visible in the dark mode.

--- a/packages/monaco/src/browser/style/index.css
+++ b/packages/monaco/src/browser/style/index.css
@@ -36,6 +36,10 @@
     margin-right: 0px;
 }
 
+.monaco-quick-open-widget {
+    background-color: var(--theia-layout-color1) !important;
+}
+
 .quick-open-entry .quick-open-row .monaco-icon-label .monaco-icon-label-description-container .monaco-highlighted-label .highlight {
     color: var(--theia-accent-color1);
 }
